# fake_face_cam

./: .gitignore  README.md  pyproject.toml  run.py  utils.py
modes/: face_mode.py  face_swap_mode.py  matrix_mode.py  raw_mode.py  timeshit_mode.py
modes/old_swap/: face_analyze.py  face_swap_mode.py
utils/: __init__.py  effects.py  face_analyzer.py
