[project]
name = "virtualcam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.13.0.90",
    "pyvirtualcam>=0.15.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]


[tool.ruff.format]
quote-style = "single"